--- a/architectures /squeeze_excitation_net.ipynb
+++ b/architectures /squeeze_excitation_net.ipynb
@@ -44,6 +44,8 @@
     "    def __init__(self, C, r=16):\n",
     "        super().__init__()\n",
     "        \n",
+    "        self.C = C\n",
+    "        self.r = r\n",
     "    \n",
     "        self.glob_pool = nn.AdaptiveAvgPool2d((1, 1))\n",
     "        \n",
