Residual realisation added

--- a/architectures /self_attention.ipynb
+++ b/architectures /self_attention.ipynb
@@ -160,6 +160,7 @@
     "        out = torch.bmm(attention, V)\n",
     "        out = out.permute(0, 2, 1).view(B, C, H, W)\n",
     "        \n",
+    "        # gamma represents, how we could relay on out of attention (out)\n",
     "        return self.gamma * out + x \n",
     "        \n",
     "        "
