StyleGAN - style mapping block idea

--- a/architectures /stylegan_block.ipynb
+++ b/architectures /stylegan_block.ipynb
@@ -187,6 +187,266 @@
     }
    ],
    "execution_count": 4
+  },
+  {
+   "metadata": {},
+   "cell_type": "markdown",
+   "source": "Another important feature of StyleGan - is Style Mapping - preprocessing of input tensor of random noise with manual weight assigning. So before fitting of random noise into a network, it should be passed through style mapping block, which uses EqualLinear blocks - custom linear block with manual weight assigning and regulation to prevent gradient explosions (weight = weight / (in_features ** 0.5):",
+   "id": "f4561ba90f6e9ea0"
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-07-18T10:11:32.238497Z",
+     "start_time": "2025-07-18T10:11:32.235438Z"
+    }
+   },
+   "cell_type": "code",
+   "source": [
+    "class EqualLinear(nn.Module):\n",
+    "    def __init__(self, in_features, out_features):\n",
+    "        super().__init__()\n",
+    "        \n",
+    "        weight = torch.randn(out_features, in_features)\n",
+    "        weight = weight / (in_features ** 0.5)\n",
+    "        self.weight = nn.Parameter(weight)\n",
+    "        self.bias = nn.Parameter(torch.zeros(out_features))\n",
+    "    \n",
+    "    def forward(self, x):\n",
+    "        return F.linear(x, self.weight, self.bias)"
+   ],
+   "id": "5bb0eb3dba806cfd",
+   "outputs": [],
+   "execution_count": 9
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-07-18T10:11:35.332765Z",
+     "start_time": "2025-07-18T10:11:35.328381Z"
+    }
+   },
+   "cell_type": "code",
+   "source": [
+    "tensor = torch.randn(1, 128)\n",
+    "block = EqualLinear(128, 256)\n",
+    "out = block(tensor)\n",
+    "out.shape\n"
+   ],
+   "id": "f7e57ca81d77a457",
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "torch.Size([1, 256])"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "execution_count": 11
+  },
+  {
+   "metadata": {},
+   "cell_type": "markdown",
+   "source": "And this way we could create StyleMap block, which will produce several style vectors:",
+   "id": "e38652f90d0fa390"
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-07-18T10:15:18.994382Z",
+     "start_time": "2025-07-18T10:15:18.985955Z"
+    }
+   },
+   "cell_type": "code",
+   "source": [
+    "class StyleMap(nn.Module):\n",
+    "    def __init__(self, in_channels, hidden_channels, out_channels, itter):\n",
+    "        super().__init__()\n",
+    "        \n",
+    "        # add as much as you need\n",
+    "        self.net = nn.Sequential(\n",
+    "            EqualLinear(in_channels, hidden_channels),\n",
+    "            nn.LeakyReLU(0.2, inplace=True),\n",
+    "            EqualLinear(hidden_channels, hidden_channels),\n",
+    "            nn.LeakyReLU(0.2, inplace=True),\n",
+    "            EqualLinear(hidden_channels, hidden_channels),\n",
+    "            nn.LeakyReLU(0.2, inplace=True),\n",
+    "            EqualLinear(hidden_channels, hidden_channels),\n",
+    "            nn.LeakyReLU(0.2, inplace=True),\n",
+    "        )\n",
+    "        \n",
+    "        self.style = nn.ModuleList([EqualLinear(hidden_channels, out_channels) for _ in range(itter)])\n",
+    "    \n",
+    "    def forward(self, x):\n",
+    "        out = self.net(x)\n",
+    "        return [style(out) for style in self.style]"
+   ],
+   "id": "64f6c6ba6b78acc4",
+   "outputs": [],
+   "execution_count": 12
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-07-18T10:28:39.050690Z",
+     "start_time": "2025-07-18T10:28:39.017977Z"
+    }
+   },
+   "cell_type": "code",
+   "source": [
+    "# this will return 5 style vectors\n",
+    "map = StyleMap(128, 256, 512, 5)\n",
+    "tensor = torch.randn(1, 128)\n",
+    "\n",
+    "out = map(tensor)\n",
+    "print(f\"Map length: {len(out)}, Vector shape: {out[0].shape}\")"
+   ],
+   "id": "94e8b3681ab31b81",
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Map length: 5, Vector shape: torch.Size([1, 512])\n"
+     ]
+    }
+   ],
+   "execution_count": 14
+  },
+  {
+   "metadata": {},
+   "cell_type": "markdown",
+   "source": "And the most important part - during building model, pass unique style vector from StyleMap to each layer of ModulatedCond2d:",
+   "id": "337b17cacf9fa90e"
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-07-18T11:27:35.576653Z",
+     "start_time": "2025-07-18T11:27:35.561139Z"
+    }
+   },
+   "cell_type": "code",
+   "source": [
+    "# also it needs different normalising methods such as Pixel normalisation\n",
+    "# or spectral normalisation. Also it could be useful to realise idea of skip connection\n",
+    "\n",
+    "class StyleGenerator(nn.Module):\n",
+    "    def __init__(self, noise_shape=256, cond_shape=16, hidden_shape=512, out_shape=512, itter=5):\n",
+    "        super().__init__()\n",
+    "    \n",
+    "        self.style_map = StyleMap(noise_shape+cond_shape, hidden_shape, out_shape, itter)\n",
+    "        \n",
+    "        self.const_input = nn.Parameter(torch.randn(1, 512, 8, 8))\n",
+    "        \n",
+    "        self.conv1 = ModulatedCond2d(512, 256, 3, out_shape)\n",
+    "        self.conv2 = ModulatedCond2d(256, 128, 3, out_shape)\n",
+    "        self.conv3 = ModulatedCond2d(128, 64, 3, out_shape)\n",
+    "        self.conv4 = ModulatedCond2d(64, 32, 3, out_shape)\n",
+    "        self.conv5 = ModulatedCond2d(32, 32, 3, out_shape)\n",
+    "        \n",
+    "        self.conv6 = nn.Conv2d(32, 3, 3, 1, 1)\n",
+    "        \n",
+    "        self.upsample = nn.Upsample(scale_factor=2, mode='bilinear', align_corners=True)\n",
+    "        \n",
+    "    \n",
+    "    def forward(self, x, y):\n",
+    "        B, C = x.shape\n",
+    "        out = self.const_input.repeat(B, 1, 1, 1)\n",
+    "        \n",
+    "        z = torch.cat([x, y], dim=1)\n",
+    "        styles = self.style_map(z)\n",
+    "        \n",
+    "        out = F.leaky_relu(self.upsample(self.conv1(out, styles[0])))\n",
+    "        out = F.leaky_relu(self.upsample(self.conv2(out, styles[1])))\n",
+    "        out = F.leaky_relu(self.upsample(self.conv3(out, styles[2])))\n",
+    "        out = F.leaky_relu(self.upsample(self.conv4(out, styles[3])))\n",
+    "        out = F.leaky_relu(self.upsample(self.conv5(out, styles[4])))\n",
+    "        \n",
+    "        # as output activation it uses tanh, so data should be normalised in range [-1, 1]\n",
+    "        return torch.tanh(self.conv6(out))\n",
+    "        \n",
+    "        \n",
+    "        \n",
+    "        "
+   ],
+   "id": "e2da30a49105cd7e",
+   "outputs": [],
+   "execution_count": 18
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-07-18T11:27:48.806199Z",
+     "start_time": "2025-07-18T11:27:48.572067Z"
+    }
+   },
+   "cell_type": "code",
+   "source": [
+    "model = StyleGenerator()\n",
+    "# let it be a random noise:\n",
+    "tensor1 = torch.randn(1, 256)\n",
+    "# and let it be a condition for generation:\n",
+    "tensor2 = torch.randn(1, 16)\n",
+    "\n",
+    "out = model(tensor1, tensor2)\n",
+    "# size of output will be [1, 3, 256, 256]\n",
+    "out.shape"
+   ],
+   "id": "ded3001cc191223a",
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Style shape: torch.Size([1, 1, 512, 1, 1])\n",
+      "Weight shape 1: torch.Size([1, 256, 512, 3, 3])\n",
+      "Demodulation shape: torch.Size([1, 256])\n",
+      "Weight shape 2: torch.Size([1, 256, 512, 3, 3])\n",
+      "Weight shape 3: torch.Size([256, 512, 3, 3])\n",
+      "X shape: torch.Size([1, 512, 8, 8])\n",
+      "Style shape: torch.Size([1, 1, 256, 1, 1])\n",
+      "Weight shape 1: torch.Size([1, 128, 256, 3, 3])\n",
+      "Demodulation shape: torch.Size([1, 128])\n",
+      "Weight shape 2: torch.Size([1, 128, 256, 3, 3])\n",
+      "Weight shape 3: torch.Size([128, 256, 3, 3])\n",
+      "X shape: torch.Size([1, 256, 16, 16])\n",
+      "Style shape: torch.Size([1, 1, 128, 1, 1])\n",
+      "Weight shape 1: torch.Size([1, 64, 128, 3, 3])\n",
+      "Demodulation shape: torch.Size([1, 64])\n",
+      "Weight shape 2: torch.Size([1, 64, 128, 3, 3])\n",
+      "Weight shape 3: torch.Size([64, 128, 3, 3])\n",
+      "X shape: torch.Size([1, 128, 32, 32])\n",
+      "Style shape: torch.Size([1, 1, 64, 1, 1])\n",
+      "Weight shape 1: torch.Size([1, 32, 64, 3, 3])\n",
+      "Demodulation shape: torch.Size([1, 32])\n",
+      "Weight shape 2: torch.Size([1, 32, 64, 3, 3])\n",
+      "Weight shape 3: torch.Size([32, 64, 3, 3])\n",
+      "X shape: torch.Size([1, 64, 64, 64])\n",
+      "Style shape: torch.Size([1, 1, 32, 1, 1])\n",
+      "Weight shape 1: torch.Size([1, 32, 32, 3, 3])\n",
+      "Demodulation shape: torch.Size([1, 32])\n",
+      "Weight shape 2: torch.Size([1, 32, 32, 3, 3])\n",
+      "Weight shape 3: torch.Size([32, 32, 3, 3])\n",
+      "X shape: torch.Size([1, 32, 128, 128])\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "torch.Size([1, 3, 256, 256])"
+      ]
+     },
+     "execution_count": 20,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "execution_count": 20
   }
  ],
  "metadata": {
